[build-system]
requires = ["setuptools>=61.0", "versioningit~=2.0"]
build-backend = "setuptools.build_meta"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "mbuild_polybuild"
description = "This mbuild recipe allows for the generation of complex monomers with controlled tacticity."
keywords = [
    "molecular simulations",
    "polymer",
]
dynamic = ["version"]
readme = "README.md"

authors = [
    { name = "Jennifer A Clark", email = "jennifer.clark@nist.gov" },
]
maintainers = [
    {name = "Debra J. Audus", email = "debra.audus@nist.gov"},
]
# See https://pypi.org/classifiers/
classifiers = ["License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
# Declare any run-time dependencies that should be installed with the package.
dependencies = [
    "importlib-resources;python_version<'3.10'",
    "pre-commit",
    "numpy",
    "mbuild",
    "foyer",
    "mdtraj",
    "parmed",
    "black",
    "ruff"
]
[project.optional-dependencies]
test = [
    "pytest>=6.1.2",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
    "pytest-runner",
    "codecov"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "myst_parser",
    "sphinx_copybutton",

]


# Update the urls once the hosting is set up.
[project.urls]
"GitHub Source" = "https://github.com/usnistgov/mbuild_polybuild/"
"DOI" = "https://data.nist.gov/od/id/mds2-3640"

[tool.setuptools]
zip-safe = false

include-package-data = false
license-files = ["LICENSE.md"]

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

# Ref https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
[tool.setuptools.package-data]
mbuild_polybuild = [
    "py.typed"
]

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "mbuild_polybuild/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mbuild_polybuild/tests",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
indent-width = 4
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "site-packages",
    "venv",
]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
omit = [
    # Omit the tests
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.yapf]
COLUMN_LIMIT = 120
INDENT_WIDTH = 4
USE_TABS = false
